--- a/app/views/shopping_carts/show.html.slim
+++ b/app/views/shopping_carts/show.html.slim
@@ -17,3 +17,25 @@ h1 Shopping Cart
               = humanized_money_with_symbol(@cart.subtotal_for(performance))
             
 h3 Total #{humanized_money_with_symbol(@cart.total_cost)}
+
+h2 Checkout
+
+h3 Credit Card Info
+
+= form_tag(payments_path, class: "form-inline") do
+  = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
+  .form_group
+    = label_tag(:credit_card_number, "Credit Card Number", class: "sr-only")
+    = text_field_tag(:credit_card_number,
+        "", class: "form-control", placeholder: "Credit Card #")
+  .form_group
+    = label_tag(:expiration_month, "Month", class: "sr-only")
+    = text_field_tag(:expiration_month,
+        "", class: "form-control", placeholder: "Month")
+    = label_tag(:expiration_year, "Year", class: "sr-only")
+    = text_field_tag(:expiration_year,
+        "", class: "form-control", placeholder: "Year")
+    = label_tag(:cvc, "CVC", class: "sr-only")
+    = text_field_tag(:cvc, "", class: "form-control", placeholder: "CVC #")
+  .form_group
+    = submit_tag("Purchase Cart", class: "btn btn-default", id: "purchase")
