Implement clien-side payment authentication
- re-form the form
- add JavaScript to the form
- update StripeToken class
- adjust the end-to-end test

--- a/app/views/shopping_carts/show.html.slim
+++ b/app/views/shopping_carts/show.html.slim
@@ -15,27 +15,32 @@ h1 Shopping Cart
             td.ticket_count= @cart.performance_count[performance.id]
             td.subtotal
               = humanized_money_with_symbol(@cart.subtotal_for(performance))
-            
+
 h3 Total #{humanized_money_with_symbol(@cart.total_cost)}
 
 h2 Checkout
 
 h3 Credit Card Info
 
-= form_tag(payments_path, class: "form-inline") do
+= form_tag(payments_path, class: "form-inline", id: "payment-form") do
   = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
+
   .form_group
     = label_tag(:credit_card_number, "Credit Card Number", class: "sr-only")
-    = text_field_tag(:credit_card_number,
-        "", class: "form-control", placeholder: "Credit Card #")
+    input.form-control(placeholder="Credit Card #"
+      data-stripe="number" id="credit_card_number")
+
   .form_group
     = label_tag(:expiration_month, "Month", class: "sr-only")
-    = text_field_tag(:expiration_month,
-        "", class: "form-control", placeholder: "Month")
+    input.form-control(placeholder="Month"
+      data-stripe="exp-month" id="expiration_month")
+
     = label_tag(:expiration_year, "Year", class: "sr-only")
-    = text_field_tag(:expiration_year,
-        "", class: "form-control", placeholder: "Year")
+    input.form-control(placeholder="Year"
+      data-stripe="exp-year", id="expiration_year")
+
     = label_tag(:cvc, "CVC", class: "sr-only")
-    = text_field_tag(:cvc, "", class: "form-control", placeholder: "CVC #")
+    input.form-control(placeholder="CVC #" data-stripe="cvc", id="cvc")
+
   .form_group
     = submit_tag("Purchase Cart", class: "btn btn-default", id: "purchase")
