--- a/app/views/shopping_carts/show.html.slim
+++ b/app/views/shopping_carts/show.html.slim
@@ -20,45 +20,4 @@ h3 Total #{humanized_money_with_symbol(@cart.total_cost)}
 
 h2 Checkout
 
-h3 Payment Options
-
-= form_tag(payments_path, class: "form-inline", id: "payment-form") do
-
-  .paypal
-    img(src="https://www.paypal.com/en_US/i/logo/PayPal_mark_37x23.gif"
-        align="left" style="margin-right:7px;")
-    span(style="font-size:11px; font-family: Arial, Verdana;")
-      | The safer, easier way to pay.
-    = radio_button_tag(:payment_type,
-        :paypal, false,
-        class: "payment-type-radio", id: "paypal_radio")
-  .credit_card
-    | Credit Card
-    = radio_button_tag(:payment_type,
-        :credit, true,
-        class: "payment-type-radio", id: "credit_radio")
-
-    = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
-
-    #credit-card-info
-      h3 Credit Card Info
-
-      .form_group
-        = label_tag(:credit_card_number, "Credit Card Number", class: "sr-only")
-        input.form-control(placeholder="Credit Card #"
-          data-stripe="number" id="credit_card_number")
-
-      .form_group
-        = label_tag(:expiration_month, "Month", class: "sr-only")
-        input.form-control(placeholder="Month"
-          data-stripe="exp-month" id="expiration_month")
-
-        = label_tag(:expiration_year, "Year", class: "sr-only")
-        input.form-control(placeholder="Year"
-          data-stripe="exp-year", id="expiration_year")
-
-        = label_tag(:cvc, "CVC", class: "sr-only")
-        input.form-control(placeholder="CVC #" data-stripe="cvc", id="cvc")
-
-    .form_group
-      = submit_tag("Purchase Cart", class: "btn btn-default", id: "purchase")
+= render "credit_card_info"
