--- a/app/views/layouts/_navigation_links.html.slim
+++ b/app/views/layouts/_navigation_links.html.slim
@@ -1,5 +1,7 @@
 li= link_to("Events", events_path)
+li= link_to("Subscription plans", plans_path)
 - if user_signed_in?
+  li= link_to("Dashboard", user_path(current_user))
   li= link_to("Edit account", edit_user_registration_path)
   li= link_to("Sign out", destroy_user_session_path, method: "delete")
 - else
