--- a/app/views/layouts/_messages.html.slim
+++ b/app/views/layouts/_messages.html.slim
@@ -4,3 +4,12 @@
       button.close(
         type="button" data-dismiss="alert" aria-hidden="true") &times;
       div(id="flash_#{name}")= msg
+
+- if simulating_admin_user
+  .alert.alert-danger
+    button.close(aria-hidden="true"
+      data-dismiss=alert type="button")
+      | &times;
+    div
+      | You are simulating #{current_user.email} 
+      = link_to("End Simulation", user_simulation_path, method: :delete)
