--- a/app/views/payments/show.html.slim
+++ b/app/views/payments/show.html.slim
@@ -15,7 +15,7 @@ h1 Payment Number: #{@reference}
             td= ticket.performance.start_time.to_date.to_s(:long)
             td.subtotal= humanized_money_with_symbol(payment_line_item.price)
 
-  h3 Total #{humanized_money_with_symbol(@payment.total_cost)}
+  h3 Total #{humanized_money_with_symbol(@payment.price)}
 
 - else
 
