--- a/app/views/shopping_carts/_credit_card_info.html.slim
+++ b/app/views/shopping_carts/_credit_card_info.html.slim
@@ -1,7 +1,14 @@
+- if @cart.is_a?(ShoppingCart)
+  h3 Shipping Info
+  - if @cart.address.present?
+    .active_shipping_method= @cart.shipping_method
+    .active_shipping_address= @cart.address.all_fields
+  - else
+    = link_to "Select Shipping Method", new_address_path, id: "shipping_details"
+
 h3 Payment Options
 
-= form_tag(payments_path,
-  class: "credit-card-form form-horizontal", id: "payment-form") do
+= form_tag(discount_codes_path, id: "discount-code-form") do
   
   .form-group
     .col-sm-2
@@ -10,19 +17,22 @@ h3 Payment Options
       input.form-control.valid-field(name="discount_code" id="discount_code")
     .col-sm-3
       = submit_tag("Apply Code", class: "btn btn-primary", id: "apply_code")
-    = hidden_field_tag(:active_discount_code, "")
-    
-    - if current_user.admin?
-      .form-group
-        .col-sm-2
-          = label_tag(:purchase_amount,
-            "Purchase Amount Override ($X.XX)", class: "control-label")
-        .col-sm-2
-          input.form-control(name="purchase_amount"
-            id="purchase_amount"
-            value=humanized_money(@cart.total_cost))
-    - else
-      = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
+
+= form_tag(payments_path,
+    class: "credit-card-form form-horizontal", id: "payment-form") do
+  = hidden_field_tag(:active_discount_code, "")
+
+  - if current_user.admin?
+    .form-group
+      .col-sm-2
+        = label_tag(:purchase_amount,
+          "Purchase Amount Override ($X.XX)", class: "control-label")
+      .col-sm-2
+        input.form-control(name="purchase_amount"
+          id="purchase_amount"
+          value=humanized_money(@cart.total_cost))
+  - else
+    = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
 
   = hidden_field_tag(:purchase_amount_cents, @cart.total_cost.cents)
   = hidden_field_tag(@cart.item_attribute, @cart.item_ids)
