--- a/app/views/shopping_carts/show.html.slim
+++ b/app/views/shopping_carts/show.html.slim
@@ -19,7 +19,11 @@ h1 Shopping Cart
 - if @cart.discount_code
   h4.active_code Active Discount Code: #{@cart.discount_code.code}
 
-h3 Total #{humanized_money_with_symbol(@cart.total_cost)}
+- if @cart.processing_fee
+  h4.active_code
+    | Processing Fee: #{humanized_money_with_symbol(@cart.processing_fee)}
+
+h3.total Total #{humanized_money_with_symbol(@cart.total_cost)}
 
 h2 Checkout
 
