--- a/app/views/shopping_carts/show.html.slim
+++ b/app/views/shopping_carts/show.html.slim
@@ -23,6 +23,14 @@ h1 Shopping Cart
   h4.active_code
     | Processing Fee: #{humanized_money_with_symbol(@cart.processing_fee)}
 
+- if @cart.shipping_fee
+  h4.active_code
+    | Shipping Fee: #{humanized_money_with_symbol(@cart.shipping_fee)}
+
+- if @cart.sales_tax.nonzero?
+  h4.active_code
+    | Sales Tax: #{humanized_money_with_symbol(@cart.sales_tax)}
+
 h3.total Total #{humanized_money_with_symbol(@cart.total_cost)}
 
 h2 Checkout
