Create an affiliate program for the application using Stripe Connect
- implement the option for users to create affiliate accounts
- change Stripe payment workflow to enable affiliate payments
- implement a framework for the affiliate account verification
    - determine needed identifying information
    - obtain it from the account holder
    - send it to Stripe

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    meta(name="viewport" content="width=device-width" initial-scale="1.0")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title= content_for?(:title) ? yield(:title) : "Snow Globe Theater"
     meta(name="description"
       content="#{content_for?(:description) ? yield(:description) : "Globe"}")
@@ -14,7 +14,7 @@ html(lang="en")
     javascript:
       Stripe.setPublishableKey(
         "#{Rails.application.secrets.stripe_publishable_key}");
-    
+
     = csrf_meta_tags
   
   body
